--- a/index.html
+++ b/index.html
@@ -9,8 +9,8 @@
   <canvas id="gameCanvas" width="800" height="600"></canvas>
 
   <!-- Scripts -->
-  <script src="scripts/input.js"></script>
-  <script src="scripts/player.js"></script>
-  <script src="scripts/gamemanager.js"></script>
+  <script src="Scripts/input.js"></script>
+  <script src="Scripts/player.js"></script>
+  <script src="Scripts/gamemanager.js"></script>
 </body>
 </html>
